# mandelbrot

./: .gitignore  CMakeLists.txt  README.md
renders/: output folder ppm image renders.txt
src/: ColorConverter.cpp  ComplexNumber.cpp  main.cpp  main.cu
